# forge

./: README.md
api/: cookiecutter.json
api/{{ cookiecutter.project_slug }}/: Dockerfile  README.md  pyproject.toml
api/{{ cookiecutter.project_slug }}/.githooks/: pre-commit
api/{{ cookiecutter.project_slug }}/app/: __init__.py  __main__.py  config.py  dependencies.py
api/{{ cookiecutter.project_slug }}/app/core/: schemas.py  types.py
api/{{ cookiecutter.project_slug }}/app/utils/: logger.py
api/{{ cookiecutter.project_slug }}/scripts/: test.sh
python/: cookiecutter.json
python/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  pyrightconfig.json
python/{{ cookiecutter.project_slug }}/.githooks/: pre-commit
python/{{ cookiecutter.project_slug }}/app/: config.py
python/{{ cookiecutter.project_slug }}/app/dependencies/: __init__.py  logging.py
python/{{ cookiecutter.project_slug }}/app/dependencies/ai/: llm.py  openai.py  replicate.py
python/{{ cookiecutter.project_slug }}/app/dependencies/alerting/: client.py  discord.py
python/{{ cookiecutter.project_slug }}/app/dependencies/auth/: client.py
python/{{ cookiecutter.project_slug }}/app/dependencies/crawlers/: base.py  youtube.py
python/{{ cookiecutter.project_slug }}/app/dependencies/databases/orm/: client.py
