[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
uvicorn = "0.14.0"
fastapi = "^0.104.0"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
yapf = "^0.40.2"
mypy = "^1.3.0"
pylint-quotes = "^0.2.3"
pytest-asyncio = "0.21.0"
pytest-cov = "^4.1.0"
mock = "^5.0.2"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
freezegun = "^1.2.2"

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
case_sensitive=true
line_length=100
