[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
uvicorn = "0.14.0"
fastapi = "^0.104.0"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest-asyncio = "0.21.0"
pytest-cov = "^4.1.0"
mock = "^5.0.2"
pytest = "^7.3.1"
isort = "^5.12.0"
freezegun = "^1.2.2"
ruff = "^0.5.1"

[tool.poe.tasks]
test = "pytest --cov=app --cov-report term-missing tests"
run = "python -m app"
lint = "ruff check app"
format-check = "ruff format --check app"
format = "ruff format app"
sort = "isort app"

[tool.isort]
profile = "black"
case_sensitive=true
line_length=100
