[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.15.1"
pytest-asyncio = "0.21.0"
pytest-cov = "^4.1.0"
mock = "^5.0.2"
pytest = "^7.3.1"
isort = "^5.12.0"
freezegun = "^1.2.2"
ruff = "^0.5.1"

[tool.poe.tasks]
test = "pytest --cov=app --cov-report term-missing tests"
run = "python -m app"
lint-check = "ruff check app"
format-check = "ruff format --check app"
type-check = "basedpyright nimbus"
format = "ruff format app"
sort = "isort app"

[tool.isort]
profile = "black"
case_sensitive=true
line_length=100
