[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
discordwebhook = "^1.0.3"
pyditto = "^0.1.3"
result = "^0.17.0"
sqlalchemy = "^2.0.32"
structlog = "^24.4.0"
rich = "^13.8.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
google-api-python-client = "^2.145.0"
youtube-transcript-api = "^0.6.2"
replicate = "^0.33.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
openai = "^1.46.1"
langchain-openai = "^0.2.0"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.15.1"
pytest-asyncio = "0.21.0"
pytest-cov = "^4.1.0"
mock = "^5.0.2"
pytest = "^7.3.1"
isort = "^5.12.0"
freezegun = "^1.2.2"
ruff = "^0.5.1"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
test = "pytest --cov=app --cov-report term-missing tests"
run = "python -m app"
lint-check = "ruff check app"
format-check = "ruff format --check app"
type-check = "basedpyright app"
format = "ruff format app"
sort = "isort app"

[tool.isort]
profile = "black"
case_sensitive=true
line_length=100
